# Carousel-Editor

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
Model-Editor/: CMakeLists.txt
Model-Editor/src/: Camera.cpp  Camera.hpp  Game.cpp  Game.h  Main.cpp  MeshEditor.cpp  MeshEditor.hpp
Simple-Engine/: CMakeLists.txt
Simple-Engine/src/Core/: Application.cpp  Application.hpp  FileDialog.cpp  FileDialog.hpp  Scene.hpp  Window.cpp  Window.hpp
Simple-Engine/src/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Simple-Engine/src/Mesh/: CustomMesh.cpp  CustomMesh.hpp  HalfEdge.cpp  HalfEdge.hpp  Mesh.cpp  Mesh.hpp  MeshUtility.cpp  MeshUtility.hpp
Simple-Engine/src/Renderer/: OpenGlShader.cpp  OpenGlShader.hpp
shaders/: basicGizmoShader.glsl  basicShader.glsl
